# inference-flame

./: .gitignore  AUDIO_AUDIT.md  AUDIT_ANIMA_SDXL.md  AUDIT_FLUX1.md  AUDIT_FLUX1_DIT.md  AUDIT_FLUX1_ENCODERS.md  AUDIT_FLUX1_VAE_SAMPLING.md  Cargo.toml  DTYPE_AUDIT.md  ERNIE_IMAGE_PLAN.md  FLAME_LTX2_PERF_AUDIT.md  LTX2_AV_BUGS.md  LTX2_FULL_PARITY_PLAN.md  LTX_FEATURE_PARITY.md  LTX_FEATURE_PARITY_PLAN.md  MOTIF_HANDOFF.md  MOTIF_NONDET_HANDOFF.md  PERF_PERMUTE_FALLBACK_FIX.md  PERF_SDPA_FLASH_KERNEL.md  PERF_VAE_PERMUTE.md  PHASE2_TIMING_REPORT.md  PLAN_PHASE_A.md  QUALITY_PARITY_PLAN.md  README.md  ROADMAP.md  SKEPTIC_GGUF.md  TURBO_PHASE2_V5_1_SPEC.md  turbo_flame_phase1_v4_revert.md  turbo_flame_phase2_v5_1_revert.md
.cargo/: config.toml
bench/: bench_flame.rs
benches/: turbo_chroma_offload.rs  turbo_klein9b_offload.rs  turbo_qwen_edit_offload.rs
debug/: FINDINGS.md
docs/: HIDREAM_O1_KIJAI_PORT.md  HIDREAM_O1_WEIGHTS.md
flame-swap/: Cargo.toml  FLAME-CORE-PATCH.md  cc-prompt-wire-flame-swap.md
flame-swap/src/: ffi.rs  lib.rs  swap.rs
inference_ui/: Cargo.toml  SKEPTIC_BATCH_A.md  SKEPTIC_BATCH_B.md  SKEPTIC_BATCH_C.md  SKEPTIC_BATCH_D.md  SKEPTIC_PHASE1.md  SKEPTIC_PHASE2.md  SKEPTIC_PHASE3.md  SKEPTIC_PHASE4.md  SKEPTIC_PHASE5A.md
inference_ui/src/: app.rs  chrome.rs  main.rs  panels.rs  perf.rs  persist.rs  state.rs  theme.rs  tokens.rs
inference_ui/src/sections/: action_bar.rs  advanced.rs  batch.rs  canvas.rs  lora.rs  mod.rs  model.rs  perf_footer.rs  prompt.rs  queue.rs  resolution.rs  sampling.rs  seed.rs
inference_ui/src/widgets/: combo.rs  drag_value.rs  ghost_button.rs  mod.rs  progress_bar.rs  section_header.rs  thumbnail.rs
inference_ui/src/worker/: anima.rs  cascade.rs  chroma.rs  ernie.rs  flux.rs  klein.rs  mock.rs  mod.rs  paths.rs  qwenimage.rs  sd15.rs  sd3.rs  sdxl.rs  sensenova.rs  zimage.rs
ports/cosmos-predict25-2b/: BUILD_PLAN.md  PORT_SPEC.md  PORT_STATE.md  SKEPTIC_FINDINGS_2026-05-21.md  SKEPTIC_FINDINGS_2026-05-21_chunk2.md  SKEPTIC_FINDINGS_2026-05-21_chunk3.md
ports/cosmos-predict25-2b/parity/: convert_dit_pt_to_safetensors.py  convert_wan21_vae_pth_to_safetensors.py  cosmos_reason1_encode_ref.json  cosmos_reason1_encode_ref.py  cosmos_unipc_step_ref.py  cosmos_unipc_step_ref.safetensors  dump_cosmos_reason1_keys.py  dump_state_dict_keys.py  wan21_vae_cosmos_keys.txt  wan21_vae_encode_decode_ref.py
scripts/: fp8_quantize.py  hunyuan15_decode.py  hunyuan15_encode.py  ldm_vae_encode_parity.py  lora_fusion_parity_ref.py  ltx2_adain_tone_map_ref.py  ltx2_cfg_star_ref.py  ltx2_conditioning_mask_ref.py  ltx2_i2v_encode.py  ltx2_latent_upsampler_ref.py  ltx2_neg_prompt_ref.py  ltx2_sigma_schedule_ref.py  ltx2_stg_mask_ref.py  ltx2_stg_rescale_ref.py  ltx2_vae_encode_parity.py  qwen25vl_layer0_substep_dump.py  qwen25vl_layer_dump.py  qwen_edit_diff.py  qwenimage_decode.py  qwenimage_edit_encode.py  qwenimage_edit_reference.py  qwenimage_encode.py  qwenimage_vae_decode_ref.py  sd3_encode.py  sdxl_encode.py  wan21_vae_encode_parity.py  wan22_decode.py  wan22_encode.py  wan22_i2v_encode.py  wan22_vace_encode.py  wan22_vae_encode_parity.py
src/: inpaint.rs  lib.rs  lora.rs  lora_merge.rs  lycoris.rs  mux.rs  offload.rs  offload_api.rs
src/audio/: mod.rs  oobleck_encoder.rs  resample.rs  wav.rs
src/gguf/: dequant.rs  mod.rs  reader.rs  remap.rs
src/models/: acestep_condition.rs  acestep_dit.rs  anima.rs  asymflux2.rs  chroma_dit.rs  clip_encoder.rs  cosmos_predict25_dit.rs  cosmos_reason1.rs  ernie_image.rs  feature_extractor.rs  flux1_dit.rs  fp8_quant.rs  fp8_resident.rs  gemma3_encoder.rs  gpt_oss_encoder.rs  gpt_oss_rope.rs  helios_dit.rs  hunyuan15_dit.rs  kandinsky5_dit.rs  klein.rs  lance.rs  lens_dit.rs  lora_loader.rs  ltx2_conditioning.rs  ltx2_model.rs  ltx2_temporal_upsampler.rs  ltx2_upsampler.rs  magihuman_dit.rs  magihuman_sr_dit.rs  mistral3b_encoder.rs  mistral_encoder.rs  mod.rs  nava_av.rs  nava_blocks.rs  nava_loader.rs  nucleus_dit.rs  paella_vq.rs  qwen25vl_encoder.rs  qwen25vl_vit.rs  qwen3_encoder.rs  (+14 more)
src/models/boogu/: README.md  attention.rs  block.rs  block_double.rs  config.rs  decode_1024.rs  embed.rs  encoder.rs  final_layer.rs  generate.rs  loader.rs  mod.rs  rewrite_prompt.rs  rope.rs  t2i_rewrite_suffix_en.txt  t2i_rewrite_system_prompt_en.txt  tokenizer.rs  transformer.rs
src/models/gemma4/: decoder.rs  kv_cache.rs  mod.rs  model.rs  sampler.rs  tokenizer.rs  weight_loader.rs
src/models/hidream_i1/: double_block.rs  final_layer.rs  mod.rs  model.rs  moe.rs  single_block.rs  text_encoder_cat.rs  weight_loader.rs
src/models/hidream_o1/: bottleneck_patch_embed.rs  decoder.rs  final_layer.rs  lora.rs  mod.rs  model.rs  mrope.rs  pipeline.rs  prompt_agent.rs  scheduler.rs  timestep_embedder.rs  trap.rs  weight_loader.rs
src/models/ideogram4/: attention.rs  block.rs  mod.rs  (+8 more)
src/preprocess/: bucket_resize.rs  common.rs  mod.rs  qwen25vl.rs
src/sampling/: acestep_sampling.rs  boogu_sampling.rs  cosmos_rf.rs  cosmos_unipc.rs  ddpm_wuerstchen.rs  ernie_sampling.rs  euler.rs  exponential_multistep.rs  flux1_sampling.rs  helios_dmd.rs  helios_pyramid.rs  kandinsky5_sampling.rs  klein_sampling.rs  l2p_sampling.rs  lens_flowmatch.rs  ltx2_guidance.rs  ltx2_multiscale.rs  ltx2_sampling.rs  magihuman_unipc.rs  mod.rs  motif_sampling.rs  nava_sampling.rs  schedules.rs
src/turbo/: api.rs  arena.rs  block.rs  loader.rs  mod.rs
src/vae/: acestep_vae.rs  hunyuan_vae.rs  klein_vae.rs  ldm_decoder.rs  ldm_encoder.rs  lens_vae_wrapper.rs  ltx2_audio_vae.rs  ltx2_encoder.rs  ltx2_vae.rs  ltx2_vocoder.rs  mod.rs  nava_audio_wrap.rs  oklab.rs  qwenimage_decoder.rs  qwenimage_encoder.rs  wan21_encoder.rs  wan21_vae.rs  wan22_vae.rs
tests/: gguf.rs  turbo_chroma_parity.rs  turbo_ensure_resident_cold.rs  turbo_ensure_resident_hot.rs  turbo_klein9b_parity.rs  turbo_qwen_edit_parity.rs  turbo_reader_outlives_prefetch.rs  turbo_tensor_over_vmm.rs  turbo_vmm_arena_basic.rs  turbo_vmm_unsupported.rs
tools/: transcribe.py  waveform.py  zimage_encode.py
tools/gguf_ref/: README.md  gen_ref.c  ref_values.rs
(+41 files in other folders)
