[package]
name = "inference-flame"
version = "0.1.0"
authors = ["Alex"]
edition = "2021"
license = "MIT"
description = "Pure Rust diffusion model inference using flame-core"

[dependencies]
flame-core = { path = "../flame-core", default-features = false, features = ["cuda", "bf16_u16", "cudnn", "shared_storage"] }
flame-diffusion = { path = "../flame-diffusion" }
cudarc = { version = "0.11.9", default-features = false, features = ["driver", "cublas", "cublaslt", "nvrtc", "cuda-12050", "f16"] }
half = { version = "2.3", features = ["num-traits"] }
serde_json = "1.0"
memmap2 = "0.9"
anyhow = "1.0"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
env_logger = "0.10"
rand = "0.8.5"
log = "0.4"
image = "0.24"

[features]
default = ["cuda", "bf16_u16"]
cuda = []
bf16_u16 = []

[[bin]]
name = "bench_flame"
path = "bench/bench_flame.rs"

[[bin]]
name = "chroma_infer"
path = "src/bin/chroma_infer.rs"

[[bin]]
name = "chroma_encode"
path = "src/bin/chroma_encode.rs"

[[bin]]
name = "chroma_gen"
path = "src/bin/chroma_gen.rs"

[[bin]]
name = "qwenimage_gen"
path = "src/bin/qwenimage_gen.rs"

[[bin]]
name = "qwenimage_edit_gen"
path = "src/bin/qwenimage_edit_gen.rs"

[[bin]]
name = "zimage_infer"
path = "src/bin/zimage_infer.rs"

[[bin]]
name = "klein_infer"
path = "src/bin/klein_infer.rs"

[[bin]]
name = "klein_edit_infer"
path = "src/bin/klein_edit_infer.rs"

[[bin]]
name = "sd3_infer"
path = "src/bin/sd3_infer.rs"

[[bin]]
name = "sdxl_infer"
path = "src/bin/sdxl_infer.rs"

[[bin]]
name = "sd15_infer"
path = "src/bin/sd15_infer.rs"

[[bin]]
name = "klein9b_infer"
path = "src/bin/klein9b_infer.rs"

[[bin]]
name = "debug_encoder"
path = "src/bin/debug_encoder.rs"

[[bin]]
name = "anima_infer"
path = "src/bin/anima_infer.rs"

[[bin]]
name = "klein9b_encode"
path = "src/bin/klein9b_encode.rs"

[[bin]]
name = "klein9b_compare"
path = "src/bin/klein9b_compare.rs"

[[bin]]
name = "ltx2_generate"
path = "src/bin/ltx2_generate.rs"

[[bin]]
name = "ltx2_i2v_gen"
path = "src/bin/ltx2_i2v_gen.rs"

[[bin]]
name = "ltx2_load_test"
path = "src/bin/ltx2_load_test.rs"

[[bin]]
name = "ltx2_vae_test"
path = "src/bin/ltx2_vae_test.rs"

[[bin]]
name = "rope_dump"
path = "src/bin/rope_dump.rs"

[[bin]]
name = "temb_dump"
path = "src/bin/temb_dump.rs"

[[bin]]
name = "mistral_test"
path = "src/bin/mistral_test.rs"

[[bin]]
name = "test_gemma_encoder"
path = "src/bin/test_gemma_encoder.rs"

[[bin]]
name = "flux1_test"
path = "src/bin/flux1_test.rs"

[[bin]]
name = "flux1_infer"
path = "src/bin/flux1_infer.rs"

[[bin]]
name = "wan22_t2v_gen"
path = "src/bin/wan22_t2v_gen.rs"

[[bin]]
name = "wan22_i2v_gen"
path = "src/bin/wan22_i2v_gen.rs"

[[bin]]
name = "wan_vace_gen"
path = "src/bin/wan_vace_gen.rs"

[[bin]]
name = "hunyuan15_gen"
path = "src/bin/hunyuan15_gen.rs"

[[bin]]
name = "klein9b_edit_infer"
path = "src/bin/klein9b_edit_infer.rs"

[[bin]]
name = "kandinsky5_infer"
path = "src/bin/kandinsky5_infer.rs"

[[bin]]
name = "ltx2_decode_av"
path = "src/bin/ltx2_decode_av.rs"

[[bin]]
name = "wan_infer"
path = "src/bin/wan_infer.rs"

[[bin]]
name = "wan_smoke"
path = "src/bin/wan_smoke.rs"

[[bin]]
name = "ldm_vae_encode_parity"
path = "src/bin/ldm_vae_encode_parity.rs"

[[bin]]
name = "ltx2_vae_encode_parity"
path = "src/bin/ltx2_vae_encode_parity.rs"

[[bin]]
name = "wan22_vae_encode_parity"
path = "src/bin/wan22_vae_encode_parity.rs"

[[bin]]
name = "wan21_vae_encode_parity"
path = "src/bin/wan21_vae_encode_parity.rs"

[[bin]]
name = "acestep_gen"
path = "src/bin/acestep_gen.rs"

[[bin]]
name = "acestep_parity"
path = "src/bin/acestep_parity.rs"

[[bin]]
name = "ltx2_neg_prompt_parity"
path = "src/bin/ltx2_neg_prompt_parity.rs"
