[package]
name = "inference-flame"
version = "0.1.0"
authors = ["Alex"]
edition = "2021"
license = "MIT"
description = "Pure Rust diffusion model inference using flame-core"
# Disable auto-discovery: several src/bin/* files are work-in-progress and
# reference modules that don't exist (motif_video_dit, nucleus_dit,
# qwen3vl_encoder). Auto-discovery would pull them into every `cargo test`
# invocation. We enumerate the working bins / tests / benches manually.
autobins = false
autotests = false
autobenches = false

[dependencies]
flame-core = { path = "../flame-core", default-features = false, features = ["cuda", "bf16_u16", "cudnn", "shared_storage"] }
flame-diffusion = { path = "../flame-diffusion" }
lanpaint-flame = { path = "../lanpaint-flame" }
lycoris-rs = { path = "../eri-lycoris/lycoris-rs" }
cudarc = { version = "0.11.9", default-features = false, features = ["driver", "cublas", "cublaslt", "nvrtc", "cuda-12050", "f16"] }
half = { version = "2.3", features = ["num-traits"] }
serde_json = "1.0"
memmap2 = "0.9"
anyhow = "1.0"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
env_logger = "0.10"
rand = "0.8.5"
log = "0.4"
image = "0.24"

[features]
default = ["cuda", "bf16_u16"]
cuda = []
bf16_u16 = []
# Turbo Flame Phase 1: VMM-backed double-buffered block loader for Klein 9B
# inference. Off by default — enables `src/turbo/`, the
# `klein9b_infer_turbo` binary, and the `turbo_*` test suite.
turbo = []

[[bin]]
name = "bench_flame"
path = "bench/bench_flame.rs"

[[bin]]
name = "chroma_infer"
path = "src/bin/chroma_infer.rs"

[[bin]]
name = "chroma_encode"
path = "src/bin/chroma_encode.rs"

[[bin]]
name = "chroma_gen"
path = "src/bin/chroma_gen.rs"

[[bin]]
name = "qwenimage_gen"
path = "src/bin/qwenimage_gen.rs"

[[bin]]
name = "qwenimage_lora_gen"
path = "src/bin/qwenimage_lora_gen.rs"

[[bin]]
name = "qwenimage_edit_gen"
path = "src/bin/qwenimage_edit_gen.rs"

[[bin]]
name = "zimage_infer"
path = "src/bin/zimage_infer.rs"

[[bin]]
name = "zimage_parity"
path = "src/bin/zimage_parity.rs"

[[bin]]
name = "zimage_lora_infer"
path = "src/bin/zimage_lora_infer.rs"

[[bin]]
name = "sdxl_encode"
path = "src/bin/sdxl_encode.rs"

[[bin]]
name = "sdxl_vae_decode_test"
path = "src/bin/sdxl_vae_decode_test.rs"

[[bin]]
name = "sdxl_lora_infer"
path = "src/bin/sdxl_lora_infer.rs"

[[bin]]
name = "sd3_lora_infer"
path = "src/bin/sd3_lora_infer.rs"

[[bin]]
name = "ernie_lora_infer"
path = "src/bin/ernie_lora_infer.rs"

[[bin]]
name = "klein_infer"
path = "src/bin/klein_infer.rs"

[[bin]]
name = "klein_lora_infer"
path = "src/bin/klein_lora_infer.rs"

[[bin]]
name = "klein_edit_infer"
path = "src/bin/klein_edit_infer.rs"

[[bin]]
name = "sd3_infer"
path = "src/bin/sd3_infer.rs"

[[bin]]
name = "sdxl_infer"
path = "src/bin/sdxl_infer.rs"

[[bin]]
name = "sd15_infer"
path = "src/bin/sd15_infer.rs"

[[bin]]
name = "klein9b_infer"
path = "src/bin/klein9b_infer.rs"

[[bin]]
name = "debug_encoder"
path = "src/bin/debug_encoder.rs"

[[bin]]
name = "anima_infer"
path = "src/bin/anima_infer.rs"

[[bin]]
name = "anima_lora_infer"
path = "src/bin/anima_lora_infer.rs"

[[bin]]
name = "klein9b_encode"
path = "src/bin/klein9b_encode.rs"

[[bin]]
name = "klein9b_compare"
path = "src/bin/klein9b_compare.rs"

[[bin]]
name = "ltx2_generate"
path = "src/bin/ltx2_generate.rs"

[[bin]]
name = "ltx2_i2v_gen"
path = "src/bin/ltx2_i2v_gen.rs"

[[bin]]
name = "ltx2_load_test"
path = "src/bin/ltx2_load_test.rs"

[[bin]]
name = "ltx2_vae_test"
path = "src/bin/ltx2_vae_test.rs"

[[bin]]
name = "rope_dump"
path = "src/bin/rope_dump.rs"

[[bin]]
name = "temb_dump"
path = "src/bin/temb_dump.rs"

[[bin]]
name = "mistral_test"
path = "src/bin/mistral_test.rs"

[[bin]]
name = "test_gemma_encoder"
path = "src/bin/test_gemma_encoder.rs"

[[bin]]
name = "flux1_test"
path = "src/bin/flux1_test.rs"

[[bin]]
name = "flux1_infer"
path = "src/bin/flux1_infer.rs"

[[bin]]
name = "flux_inpaint"
path = "src/bin/flux_inpaint.rs"

[[bin]]
name = "zimage_inpaint"
path = "src/bin/zimage_inpaint.rs"

[[bin]]
name = "klein_inpaint"
path = "src/bin/klein_inpaint.rs"

[[bin]]
name = "chroma_inpaint"
path = "src/bin/chroma_inpaint.rs"

[[bin]]
name = "qwenimage_inpaint"
path = "src/bin/qwenimage_inpaint.rs"

[[bin]]
name = "sd3_inpaint"
path = "src/bin/sd3_inpaint.rs"

[[bin]]
name = "ernie_inpaint"
path = "src/bin/ernie_inpaint.rs"

[[bin]]
name = "sdxl_inpaint"
path = "src/bin/sdxl_inpaint.rs"

[[bin]]
name = "sd15_inpaint"
path = "src/bin/sd15_inpaint.rs"

[[bin]]
name = "wan22_t2v_gen"
path = "src/bin/wan22_t2v_gen.rs"

[[bin]]
name = "wan22_i2v_gen"
path = "src/bin/wan22_i2v_gen.rs"

[[bin]]
name = "wan_vace_gen"
path = "src/bin/wan_vace_gen.rs"

[[bin]]
name = "hunyuan15_gen"
path = "src/bin/hunyuan15_gen.rs"

[[bin]]
name = "klein9b_edit_infer"
path = "src/bin/klein9b_edit_infer.rs"

[[bin]]
name = "kandinsky5_infer"
path = "src/bin/kandinsky5_infer.rs"

[[bin]]
name = "ltx2_decode_av"
path = "src/bin/ltx2_decode_av.rs"

[[bin]]
name = "wan_infer"
path = "src/bin/wan_infer.rs"

[[bin]]
name = "wan_smoke"
path = "src/bin/wan_smoke.rs"

[[bin]]
name = "lanpaint_gpu_smoke"
path = "src/bin/lanpaint_gpu_smoke.rs"

[[bin]]
name = "ldm_vae_encode_parity"
path = "src/bin/ldm_vae_encode_parity.rs"

[[bin]]
name = "ltx2_vae_encode_parity"
path = "src/bin/ltx2_vae_encode_parity.rs"

[[bin]]
name = "wan22_vae_encode_parity"
path = "src/bin/wan22_vae_encode_parity.rs"

[[bin]]
name = "wan21_vae_encode_parity"
path = "src/bin/wan21_vae_encode_parity.rs"

[[bin]]
name = "acestep_gen"
path = "src/bin/acestep_gen.rs"

[[bin]]
name = "acestep_parity"
path = "src/bin/acestep_parity.rs"

[[bin]]
name = "ltx2_neg_prompt_parity"
path = "src/bin/ltx2_neg_prompt_parity.rs"

[[bin]]
name = "ltx2_latent_upsampler_parity"
path = "src/bin/ltx2_latent_upsampler_parity.rs"

[[bin]]
name = "ltx2_adain_tone_map_parity"
path = "src/bin/ltx2_adain_tone_map_parity.rs"

[[bin]]
name = "ltx2_generate_ms"
path = "src/bin/ltx2_generate_ms.rs"

[[bin]]
name = "klein9b_infer_turbo"
path = "src/bin/klein9b_infer_turbo.rs"
required-features = ["turbo"]

[[bin]]
name = "chroma_infer_turbo"
path = "src/bin/chroma_infer_turbo.rs"
required-features = ["turbo"]

[[bin]]
name = "qwenimage_edit_gen_turbo"
path = "src/bin/qwenimage_edit_gen_turbo.rs"
required-features = ["turbo"]

[[bench]]
name = "turbo_klein9b_offload"
path = "benches/turbo_klein9b_offload.rs"
harness = false
required-features = ["turbo"]

[[bench]]
name = "turbo_chroma_offload"
path = "benches/turbo_chroma_offload.rs"
harness = false
required-features = ["turbo"]

[[bench]]
name = "turbo_qwen_edit_offload"
path = "benches/turbo_qwen_edit_offload.rs"
harness = false
required-features = ["turbo"]

[[bin]]
name = "sensenova_u1_gen"
path = "src/bin/sensenova_u1_gen.rs"

# ---------------------------------------------------------------------------
# Integration tests (tests/*.rs) — enumerated manually because autotests=false.
# ---------------------------------------------------------------------------

[[test]]
name = "gguf"
path = "tests/gguf.rs"

[[test]]
name = "turbo_vmm_arena_basic"
path = "tests/turbo_vmm_arena_basic.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_ensure_resident_hot"
path = "tests/turbo_ensure_resident_hot.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_ensure_resident_cold"
path = "tests/turbo_ensure_resident_cold.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_vmm_unsupported"
path = "tests/turbo_vmm_unsupported.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_tensor_over_vmm"
path = "tests/turbo_tensor_over_vmm.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_reader_outlives_prefetch"
path = "tests/turbo_reader_outlives_prefetch.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_klein9b_parity"
path = "tests/turbo_klein9b_parity.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_chroma_parity"
path = "tests/turbo_chroma_parity.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_qwen_edit_parity"
path = "tests/turbo_qwen_edit_parity.rs"
required-features = ["turbo"]
