[package]
name = "inference-flame"
version = "0.1.0"
authors = ["Alex"]
edition = "2021"
license = "MIT"
description = "Pure Rust diffusion model inference using flame-core"
# Disable auto-discovery: several src/bin/* files are work-in-progress and
# reference modules that don't exist (motif_video_dit, nucleus_dit,
# qwen3vl_encoder). Auto-discovery would pull them into every `cargo test`
# invocation. We enumerate the working bins / tests / benches manually.
autobins = false
autotests = false
autobenches = false

[dependencies]
flame-core = { path = "../flame-core", default-features = false, features = ["cuda", "bf16_u16", "cudnn", "shared_storage"] }
flame-diffusion = { path = "../flame-diffusion" }
lanpaint-flame = { path = "../lanpaint-flame" }
lycoris-rs = { path = "../eri-lycoris/lycoris-rs" }
cudarc = { version = "0.11.9", default-features = false, features = ["driver", "cublas", "cublaslt", "nvrtc", "cuda-12050", "f16"] }
half = { version = "2.3", features = ["num-traits"] }
serde_json = "1.0"
memmap2 = "0.9"
anyhow = "1.0"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
env_logger = "0.10"
rand = "0.8.5"
log = "0.4"
image = "0.24"
# Audio I/O for MagiHuman talking-head conditioning. hound: WAV read/write.
# rubato: Sinc resampling to model-expected 51200 Hz from arbitrary input rate.
hound = "3.5"
rubato = "0.16"

[features]
default = ["cuda", "bf16_u16"]
cuda = []
bf16_u16 = []
# Turbo Flame Phase 1: VMM-backed double-buffered block loader for Klein 9B
# inference. Off by default — enables `src/turbo/`, the
# `klein9b_infer_turbo` binary, and the `turbo_*` test suite.
turbo = []

[[bin]]
name = "audio_encode_smoke"
path = "src/bin/audio_encode_smoke.rs"

[[bin]]
name = "audio_roundtrip"
path = "src/bin/audio_roundtrip.rs"

[[bin]]
name = "wav_probe"
path = "src/bin/wav_probe.rs"

[[bin]]
name = "bench_flame"
path = "bench/bench_flame.rs"

[[bin]]
name = "chroma_infer"
path = "src/bin/chroma_infer.rs"

[[bin]]
name = "chroma_encode"
path = "src/bin/chroma_encode.rs"

[[bin]]
name = "chroma_gen"
path = "src/bin/chroma_gen.rs"

[[bin]]
name = "nucleus_infer"
path = "src/bin/nucleus_infer.rs"

[[bin]]
name = "hidream_o1_infer"
path = "src/bin/hidream_o1_infer.rs"

[[bin]]
name = "helios_infer"
path = "src/bin/helios_infer.rs"

[[bin]]
name = "helios_umt5_parity"
path = "src/bin/helios_umt5_parity.rs"

[[bin]]
name = "turbo_vaed_parity"
path = "src/bin/turbo_vaed_parity.rs"

[[bin]]
name = "oobleck_parity"
path = "src/bin/oobleck_parity.rs"

[[bin]]
name = "magihuman_layer4_parity"
path = "src/bin/magihuman_layer4_parity.rs"

[[bin]]
name = "deinterleave_smoke"
path = "src/bin/deinterleave_smoke.rs"

[[bin]]
name = "magihuman_layer0_parity"
path = "src/bin/magihuman_layer0_parity.rs"

[[bin]]
name = "magihuman_adapter_parity"
path = "src/bin/magihuman_adapter_parity.rs"

[[bin]]
name = "magihuman_full_dit_parity"
path = "src/bin/magihuman_full_dit_parity.rs"

[[bin]]
name = "magihuman_unipc_parity"
path = "src/bin/magihuman_unipc_parity.rs"

[[bin]]
name = "magihuman_layer0_offloader_parity"
path = "src/bin/magihuman_layer0_offloader_parity.rs"

[[bin]]
name = "magihuman_first_n_layers_parity"
path = "src/bin/magihuman_first_n_layers_parity.rs"

[[bin]]
name = "magihuman_adapter_40tok_parity"
path = "src/bin/magihuman_adapter_40tok_parity.rs"

[[bin]]
name = "magihuman_chain_bisect"
path = "src/bin/magihuman_chain_bisect.rs"

[[bin]]
name = "magihuman_layer_isolation"
path = "src/bin/magihuman_layer_isolation.rs"

[[bin]]
name = "magihuman_dump_chain_l2"
path = "src/bin/magihuman_dump_chain_l2.rs"

[[bin]]
name = "magihuman_rms_compare"
path = "src/bin/magihuman_rms_compare.rs"

[[bin]]
name = "magihuman_layer0_bisect"
path = "src/bin/magihuman_layer0_bisect.rs"

[[bin]]
name = "magihuman_infer"
path = "src/bin/magihuman_infer.rs"

[[bin]]
name = "magihuman_decode"
path = "src/bin/magihuman_decode.rs"

[[bin]]
name = "nucleus_parity"
path = "src/bin/nucleus_parity.rs"

[[bin]]
name = "qwenimage_encode"
path = "src/bin/qwenimage_encode.rs"

[[bin]]
name = "qwenimage_gen"
path = "src/bin/qwenimage_gen.rs"

[[bin]]
name = "qwenimage_lora_gen"
path = "src/bin/qwenimage_lora_gen.rs"

[[bin]]
name = "qwenimage_edit_gen"
path = "src/bin/qwenimage_edit_gen.rs"

[[bin]]
name = "zimage_infer"
path = "src/bin/zimage_infer.rs"

[[bin]]
name = "zimage_parity"
path = "src/bin/zimage_parity.rs"

[[bin]]
name = "zimage_lora_infer"
path = "src/bin/zimage_lora_infer.rs"

[[bin]]
name = "sdxl_encode"
path = "src/bin/sdxl_encode.rs"

[[bin]]
name = "sdxl_vae_decode_test"
path = "src/bin/sdxl_vae_decode_test.rs"

[[bin]]
name = "sdxl_lora_infer"
path = "src/bin/sdxl_lora_infer.rs"

[[bin]]
name = "sd3_lora_infer"
path = "src/bin/sd3_lora_infer.rs"

[[bin]]
name = "ernie_image_infer"
path = "src/bin/ernie_image_infer.rs"

[[bin]]
name = "ernie_lora_infer"
path = "src/bin/ernie_lora_infer.rs"

[[bin]]
name = "klein_infer"
path = "src/bin/klein_infer.rs"

[[bin]]
name = "klein_lora_infer"
path = "src/bin/klein_lora_infer.rs"

[[bin]]
name = "klein_edit_infer"
path = "src/bin/klein_edit_infer.rs"

[[bin]]
name = "sd3_infer"
path = "src/bin/sd3_infer.rs"

[[bin]]
name = "sdxl_infer"
path = "src/bin/sdxl_infer.rs"

[[bin]]
name = "sd15_infer"
path = "src/bin/sd15_infer.rs"

[[bin]]
name = "klein9b_infer"
path = "src/bin/klein9b_infer.rs"

[[bin]]
name = "asymflux2_klein9b_infer"
path = "src/bin/asymflux2_klein9b_infer.rs"

[[bin]]
name = "debug_encoder"
path = "src/bin/debug_encoder.rs"

[[bin]]
name = "anima_infer"
path = "src/bin/anima_infer.rs"

[[bin]]
name = "anima_lora_infer"
path = "src/bin/anima_lora_infer.rs"

[[bin]]
name = "klein9b_encode"
path = "src/bin/klein9b_encode.rs"

[[bin]]
name = "klein9b_parity_dump"
path = "src/bin/klein9b_parity_dump.rs"
[[bin]]
name = "klein9b_compare"
path = "src/bin/klein9b_compare.rs"

[[bin]]
name = "ltx2_generate"
path = "src/bin/ltx2_generate.rs"

[[bin]]
name = "ltx2_i2v_gen"
path = "src/bin/ltx2_i2v_gen.rs"

[[bin]]
name = "ltx2_load_test"
path = "src/bin/ltx2_load_test.rs"

[[bin]]
name = "ltx2_vae_test"
path = "src/bin/ltx2_vae_test.rs"

[[bin]]
name = "rope_dump"
path = "src/bin/rope_dump.rs"

[[bin]]
name = "temb_dump"
path = "src/bin/temb_dump.rs"

[[bin]]
name = "mistral_test"
path = "src/bin/mistral_test.rs"

[[bin]]
name = "test_gemma_encoder"
path = "src/bin/test_gemma_encoder.rs"

[[bin]]
name = "flux1_test"
path = "src/bin/flux1_test.rs"

[[bin]]
name = "flux1_infer"
path = "src/bin/flux1_infer.rs"

[[bin]]
name = "flux_inpaint"
path = "src/bin/flux_inpaint.rs"

[[bin]]
name = "zimage_inpaint"
path = "src/bin/zimage_inpaint.rs"

[[bin]]
name = "klein_inpaint"
path = "src/bin/klein_inpaint.rs"

[[bin]]
name = "chroma_inpaint"
path = "src/bin/chroma_inpaint.rs"

[[bin]]
name = "qwenimage_inpaint"
path = "src/bin/qwenimage_inpaint.rs"

[[bin]]
name = "sd3_inpaint"
path = "src/bin/sd3_inpaint.rs"

[[bin]]
name = "ernie_inpaint"
path = "src/bin/ernie_inpaint.rs"

[[bin]]
name = "sdxl_inpaint"
path = "src/bin/sdxl_inpaint.rs"

[[bin]]
name = "sd15_inpaint"
path = "src/bin/sd15_inpaint.rs"

[[bin]]
name = "wan22_t2v_gen"
path = "src/bin/wan22_t2v_gen.rs"

[[bin]]
name = "wan22_i2v_gen"
path = "src/bin/wan22_i2v_gen.rs"

[[bin]]
name = "wan22_i2v_encode"
path = "src/bin/wan22_i2v_encode.rs"

[[bin]]
name = "wan_vace_gen"
path = "src/bin/wan_vace_gen.rs"

[[bin]]
name = "hunyuan15_gen"
path = "src/bin/hunyuan15_gen.rs"

[[bin]]
name = "hunyuan15_decode"
path = "src/bin/hunyuan15_decode.rs"

[[bin]]
name = "klein9b_edit_infer"
path = "src/bin/klein9b_edit_infer.rs"

[[bin]]
name = "kandinsky5_infer"
path = "src/bin/kandinsky5_infer.rs"

[[bin]]
name = "ltx2_decode_av"
path = "src/bin/ltx2_decode_av.rs"

[[bin]]
name = "ltx2_audio_stack_smoke"
path = "src/bin/ltx2_audio_stack_smoke.rs"

[[bin]]
name = "ltx2_audio_vae_parity"
path = "src/bin/ltx2_audio_vae_parity.rs"

[[bin]]
name = "ltx2_vocoder_parity"
path = "src/bin/ltx2_vocoder_parity.rs"

[[bin]]
name = "ltx2_lora_wiring_check"
path = "src/bin/ltx2_lora_wiring_check.rs"

[[bin]]
name = "wan_infer"
path = "src/bin/wan_infer.rs"

[[bin]]
name = "cosmos_predict25_t2v_infer"
path = "src/bin/cosmos_predict25_t2v_infer.rs"

[[bin]]
name = "cosmos_predict25_i2v_infer"
path = "src/bin/cosmos_predict25_i2v_infer.rs"

[[bin]]
name = "cosmos_predict25_v2v_infer"
path = "src/bin/cosmos_predict25_v2v_infer.rs"

[[bin]]
name = "wan_smoke"
path = "src/bin/wan_smoke.rs"

[[bin]]
name = "qwen25vl_vit_smoke"
path = "src/bin/qwen25vl_vit_smoke.rs"

[[bin]]
name = "prepare_image_smoke"
path = "src/bin/prepare_image_smoke.rs"

[[bin]]
name = "parity_lance_vit"
path = "src/bin/parity_lance_vit.rs"

[[bin]]
name = "parity_lance_preprocess"
path = "src/bin/parity_lance_preprocess.rs"

[[bin]]
name = "parity_lance_vit_end_to_end"
path = "src/bin/parity_lance_vit_end_to_end.rs"

[[bin]]
name = "lanpaint_gpu_smoke"
path = "src/bin/lanpaint_gpu_smoke.rs"

[[bin]]
name = "ldm_vae_encode_parity"
path = "src/bin/ldm_vae_encode_parity.rs"

[[bin]]
name = "ltx2_vae_encode_parity"
path = "src/bin/ltx2_vae_encode_parity.rs"

[[bin]]
name = "wan22_vae_encode_parity"
path = "src/bin/wan22_vae_encode_parity.rs"

[[bin]]
name = "wan21_vae_encode_parity"
path = "src/bin/wan21_vae_encode_parity.rs"

[[bin]]
name = "acestep_gen"
path = "src/bin/acestep_gen.rs"

[[bin]]
name = "acestep_parity"
path = "src/bin/acestep_parity.rs"

[[bin]]
name = "ltx2_neg_prompt_parity"
path = "src/bin/ltx2_neg_prompt_parity.rs"

[[bin]]
name = "ltx2_latent_upsampler_parity"
path = "src/bin/ltx2_latent_upsampler_parity.rs"

[[bin]]
name = "ltx2_adain_tone_map_parity"
path = "src/bin/ltx2_adain_tone_map_parity.rs"

[[bin]]
name = "ltx2_generate_ms"
path = "src/bin/ltx2_generate_ms.rs"

[[bin]]
name = "ltx2_generate_av"
path = "src/bin/ltx2_generate_av.rs"

[[bin]]
name = "ltx2_generate_kf"
path = "src/bin/ltx2_generate_kf.rs"

[[bin]]
name = "ltx2_two_stage"
path = "src/bin/ltx2_two_stage.rs"

[[bin]]
name = "ltx2_stage2_only"
path = "src/bin/ltx2_stage2_only.rs"

[[bin]]
name = "ltx2_full_pipeline"
path = "src/bin/ltx2_full_pipeline.rs"

[[bin]]
name = "sd3_medium_infer"
path = "src/bin/sd3_medium_infer.rs"

[[bin]]
name = "ltx2_validate"
path = "src/bin/ltx2_validate.rs"

[[bin]]
name = "klein9b_infer_turbo"
path = "src/bin/klein9b_infer_turbo.rs"
required-features = ["turbo"]

[[bin]]
name = "chroma_infer_turbo"
path = "src/bin/chroma_infer_turbo.rs"
required-features = ["turbo"]

[[bin]]
name = "qwenimage_edit_gen_turbo"
path = "src/bin/qwenimage_edit_gen_turbo.rs"
required-features = ["turbo"]

[[bench]]
name = "turbo_klein9b_offload"
path = "benches/turbo_klein9b_offload.rs"
harness = false
required-features = ["turbo"]

[[bench]]
name = "turbo_chroma_offload"
path = "benches/turbo_chroma_offload.rs"
harness = false
required-features = ["turbo"]

[[bench]]
name = "turbo_qwen_edit_offload"
path = "benches/turbo_qwen_edit_offload.rs"
harness = false
required-features = ["turbo"]

[[bin]]
name = "lance_t2i"
path = "src/bin/lance_t2i.rs"

[[bin]]
name = "lance_t2v"
path = "src/bin/lance_t2v.rs"

[[bin]]
name = "lance_i2v_gen"
path = "src/bin/lance_i2v_gen.rs"

[[bin]]
name = "parity_lance"
path = "src/bin/parity_lance.rs"

[[bin]]
name = "parity_lance_t2v"
path = "src/bin/parity_lance_t2v.rs"

[[bin]]
name = "lance_print_tokens"
path = "src/bin/lance_print_tokens.rs"

[[bin]]
name = "lance_dump_prefill_hidden"
path = "src/bin/lance_dump_prefill_hidden.rs"

[[bin]]
name = "sensenova_u1_gen"
path = "src/bin/sensenova_u1_gen.rs"

[[bin]]
name = "sensenova_u1_chat"
path = "src/bin/sensenova_u1_chat.rs"

[[bin]]
name = "sensenova_u1_edit"
path = "src/bin/sensenova_u1_edit.rs"

[[bin]]
name = "sensenova_u1_interleaved"
path = "src/bin/sensenova_u1_interleaved.rs"

[[bin]]
name = "l2p_infer"
path = "src/bin/l2p_infer.rs"

# ---------------------------------------------------------------------------
# Integration tests (tests/*.rs) — enumerated manually because autotests=false.
# ---------------------------------------------------------------------------

[[test]]
name = "gguf"
path = "tests/gguf.rs"

[[test]]
name = "turbo_vmm_arena_basic"
path = "tests/turbo_vmm_arena_basic.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_ensure_resident_hot"
path = "tests/turbo_ensure_resident_hot.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_ensure_resident_cold"
path = "tests/turbo_ensure_resident_cold.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_vmm_unsupported"
path = "tests/turbo_vmm_unsupported.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_tensor_over_vmm"
path = "tests/turbo_tensor_over_vmm.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_reader_outlives_prefetch"
path = "tests/turbo_reader_outlives_prefetch.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_klein9b_parity"
path = "tests/turbo_klein9b_parity.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_chroma_parity"
path = "tests/turbo_chroma_parity.rs"
required-features = ["turbo"]

[[test]]
name = "turbo_qwen_edit_parity"
path = "tests/turbo_qwen_edit_parity.rs"
required-features = ["turbo"]

# Mirror flame-core: route cudarc through the vendored cudarc-pinctx so the
# `install_external_ptr_hook` symbol resolves. Without this patch, building
# inference-flame pulls upstream cudarc 0.11.9 (which lacks the symbol) and
# flame-core/src/external_memory.rs fails to compile.
[patch.crates-io]
cudarc = { path = "../cudarc-pinctx" }
