[package]
name = "inference-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Flame Inference — egui desktop UI for flame-inference"

[[bin]]
name = "inference-ui"
path = "src/main.rs"

[dependencies]
# egui / eframe versions match the sibling trainer_ui crate (0.29).
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"

anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Phase 2: seed randomize button. We deliberately skip `egui-dnd` for now —
# the LoRA drag handle is rendered but reorder behavior defers to Phase 5/6.
rand = "0.8"

# Phase 5a: worker-thread channel protocol. Crossbeam (vs. std::sync::mpsc)
# for cloneable Sender/Receiver and a portable `recv_timeout` — see
# `worker/mod.rs` head comment for rationale.
crossbeam-channel = "0.5"

# Phase 6 — NVML perf telemetry (optional, default-on). Falls back to a
# placeholder backend when the feature is off so the crate still builds on
# machines without an NVIDIA driver available.
nvml-wrapper = { version = "0.10", optional = true }

# Phase 6 — cross-platform config dir resolution for the persisted state.ron.
#   Linux:   ~/.config/flame/state.ron
#   macOS:   ~/Library/Application Support/flame/state.ron
#   Windows: %APPDATA%\Flame\state.ron
dirs = "5"

# Phase 5b — real Z-Image inference. Mirror inference-flame's flame-core
# feature flags exactly (cuda + bf16_u16 + cudnn + shared_storage). cudarc
# version + features must match too — flame-core re-exports CudaDevice from
# cudarc so a feature mismatch on the dependency would manifest as type
# errors at the worker boundary.
inference-flame = { path = ".." }
flame-core = { path = "../../flame-core", default-features = false, features = ["cuda", "bf16_u16", "cudnn", "shared_storage"] }
cudarc = { version = "0.11.9", default-features = false, features = ["driver", "cublas", "cublaslt", "nvrtc", "cuda-12050", "f16"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

[features]
default = ["nvml"]
nvml = ["dep:nvml-wrapper"]
